--- a/anime/windbreakerseason1.html
+++ b/anime/windbreakerseason1.html
@@ -7,141 +7,171 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
   <style>
-    /* Reset & base */
-    * { box-sizing: border-box; margin: 0; padding: 0; }
-    html, body { width: 100%; height: 100%; overflow-x: hidden; overflow-y: auto; font-family: 'Poppins', sans-serif; background: #101010; color: #fff; }
+    /* Global resets */
+    html, body { margin:0; padding:0; width:100%; height:100%; overflow-x:hidden; font-family:'Poppins',sans-serif; background:#000; color:#fff; }
+    /* Safe area for notches */
     body { padding-bottom: env(safe-area-inset-bottom); }
-    a { text-decoration: none; color: inherit; }/* Layout */
-#mainWrapper { display: flex; flex-direction: column; min-height: 100vh; }
-header, footer { background: #111; padding: 0.75rem 1rem; }
-header { display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap; }
-header .nav { display: flex; gap: 0.5rem; }
-header h1 { font-size: 1.25rem; flex: 1; text-align: center; }
-
-/* Video container */
-#videoWrapper { position: relative; width: 100%; background: black; }
-#videoPlayer, .video-overlay { position: absolute; top: 0; left: 0; width: 100%; }
-#videoPlayer { height: 56.25vw; max-height: 100vh; }
-.video-overlay { height: 56.25vw; max-height: 100vh; pointer-events: none; z-index: 2; }
+    #mainWrapper { display:flex; flex-direction:column; min-height:100vh; }
+    header, footer { flex-shrink:0; background:rgba(0,0,0,0.8); padding:0.5rem 1rem; }
+    header { display:flex; align-items:center; justify-between; gap:1rem; flex-wrap:wrap; }
+    header h1 { flex:1; text-align:center; margin:0; font-size:1.25rem; }
+    .nav-buttons { display:flex; gap:0.5rem; }/* Video container & overlay */
+#videoWrapper { position:relative; width:100%; aspect-ratio:16/9; background:#000; }
+#videoPlayer, .video-overlay { position:absolute; top:0; left:0; width:100%; height:100%; }
+.video-overlay { z-index:2; background:transparent; }
 
 /* Controls bar like YouTube */
-.controls-bar { position: absolute; bottom: 0; left: 0; width: 100%; background: rgba(0,0,0,0.6); display: flex; align-items: center; gap: 0.5rem; padding: 0.5rem; z-index: 3; opacity: 1; transition: opacity 0.3s; }
-.controls-bar.hide { opacity: 0; }
-.controls-bar button, .controls-bar select, .controls-bar input[type=range] { background: transparent; border: none; color: #fff; }
-.controls-bar button { cursor: pointer; font-size: 1rem; padding: 0.25rem; }
-.controls-bar input[type=range] { width: 80px; }
-.progress { flex: 1; height: 4px; background: rgba(255,255,255,0.3); border-radius: 2px; cursor: pointer; position: relative; }
-.progress-filled { height: 100%; width: 0; background: #f00; border-radius: 2px; }
-.time { font-size: 0.75rem; }
+.controls { position:absolute; bottom:0; left:0; width:100%; display:flex; align-items:center; padding:0.25rem; background:rgba(0,0,0,0.6); gap:0.25rem; z-index:3; opacity:1; transition:opacity 0.3s; }
+.controls.hide { opacity:0; }
+.control-btn { background:transparent; border:none; color:#fff; font-size:1.25rem; padding:0.25rem; cursor:pointer; }
+.control-slider { -webkit-appearance:none; width:80px; height:4px; background:rgba(255,255,255,0.3); border-radius:2px; cursor:pointer; }
+.control-slider::-webkit-slider-thumb { -webkit-appearance:none; width:12px; height:12px; background:#fff; border-radius:50%; }
+.time { font-size:0.75rem; }
 
-/* Episode list & search */
-.search-container { padding: 0.75rem 1rem; background: #181818; }
-#searchBox { width: 100%; padding: 0.5rem; background: #222; border: none; border-radius: 4px; color: #fff; }
-#episodeList { display: grid; grid-template-columns: repeat(auto-fill, minmax(120px,1fr)); gap: 0.5rem; padding: 0.75rem 1rem; }
-#episodeList button { background: #e2211c; color: #fff; border: none; padding: 0.5rem; border-radius: 4px; cursor: pointer; }
+/* Episode list/search */
+.search-container { background:#111; padding:0.5rem; }
+#searchBox { width:100%; padding:0.5rem; background:#222; border:none; border-radius:0.25rem; color:#fff; }
+#episodeList { display:grid; grid-template-columns:repeat(auto-fill,minmax(120px,1fr)); gap:0.5rem; margin-top:0.5rem; }
+#episodeList button { background:#e11; color:#fff; padding:0.5rem; border:none; border-radius:0.25rem; }
 
 /* Side panel */
-.side-panel-toggle { position: fixed; top: 1rem; right: 1rem; background: #222; padding: 0.5rem; border-radius: 4px; cursor: pointer; z-index: 10; }
-.side-panel { position: fixed; top: 3rem; right: 1rem; background: #222; padding: 1rem; border-radius: 4px; display: none; flex-direction: column; gap: 0.5rem; z-index: 10; max-width: 200px; }
-.side-panel.active { display: flex; }
-.theme-option, .neon-option { padding: 0.25rem 0.5rem; border: 1px solid #444; border-radius: 4px; cursor: pointer; text-align: center; }
+.side-panel-toggle { position:fixed; top:1rem; right:1rem; background:rgba(0,0,0,0.6); padding:0.5rem; border-radius:0.5rem; cursor:pointer; z-index:10; }
+.side-panel { position:fixed; top:3rem; right:1rem; background:rgba(0,0,0,0.8); padding:1rem; border-radius:0.5rem; display:none; flex-direction:column; gap:0.5rem; z-index:10; }
+.side-panel.active { display:flex; }
+.theme-option, .neon-option { padding:0.25rem 0.5rem; border:1px solid #555; border-radius:0.25rem; cursor:pointer; }
+.neon * { text-shadow:0 0 8px currentColor,0 0 16px currentColor; }
 
-/* Neon effect on full page */
-.neon { animation: neon-glow 1.5s ease-in-out infinite alternate; }
-@keyframes neon-glow { from { text-shadow: 0 0 5px currentColor; } to { text-shadow: 0 0 20px currentColor; } }
+/* Double-tap areas */
+.tap-zone { position:absolute; top:0; width:50%; height:100%; z-index:2; }
+.tap-left { left:0; }
+.tap-right { right:0; }
 
   </style>
 </head>
 <body>
   <div id="mainWrapper">
     <header>
-      <div class="nav">
-        <a href="support.html" class="px-3 py-1 bg-red-600 rounded">Support</a>
-        <a href="index.2.html" class="px-3 py-1 bg-red-600 rounded">Back</a>
+      <div class="nav-buttons">
+        <a href="support.html" class="bg-purple-600 px-3 py-1 rounded">Support</a>
+        <a href="index.2.html" class="bg-purple-600 px-3 py-1 rounded">Back</a>
       </div>
       <h1>Wind Breaker - Season 1</h1>
-      <div style="width:40px;"></div>
+      <div style="width:48px;"></div>
     </header><div id="videoWrapper">
   <div id="videoPlayer"></div>
   <div class="video-overlay"></div>
-
-  <div class="controls-bar" id="controlsBar">
-    <button onclick="togglePlay()">▶️/⏸️</button>
-    <button onclick="seek(-10)">«10s</button>
-    <button onclick="seek(10)">10s»</button>
+  <!-- Tap zones for double-tap skip and long press -->
+  <div class="tap-zone tap-left" id="tapLeft"></div>
+  <div class="tap-zone tap-right" id="tapRight"></div>
+  <!-- Controls bar -->
+  <div class="controls" id="videoControls">
+    <button class="control-btn" id="btnPlay">▶️</button>
+    <button class="control-btn" id="btnBack10">⏪10s</button>
+    <button class="control-btn" id="btnNext10">10s⏩</button>
     <span class="time" id="currentTime">0:00</span>
-    <div class="progress" id="progressBar" onclick="scrub(event)"><div class="progress-filled" id="progressFilled"></div></div>
+    <input type="range" id="progress" class="control-slider" min="0" max="100" value="0">
     <span class="time" id="duration">0:00</span>
-    <input type="range" min="0" max="100" value="100" onchange="setVolume(this.value)" />
-    <select onchange="setRate(this.value)">
-      <option value="0.5">0.5×</option>
-      <option value="1" selected>1×</option>
-      <option value="1.5">1.5×</option>
-      <option value="2">2×</option>
+    <input type="range" id="volume" class="control-slider" min="0" max="100" value="100">
+    <select id="speed" class="control-btn">
+      <option value="0.25">0.25×</option><option value="0.5">0.5×</option><option value="1" selected>1×</option>
+      <option value="1.5">1.5×</option><option value="2">2×</option>
     </select>
-    <button onclick="playPrev()">⏮️</button>
-    <button onclick="playNext()">⏭️</button>
-    <button onclick="toggleFullscreen()">⛶</button>
+    <button class="control-btn" id="btnPIP">📺</button>
+    <button class="control-btn" id="btnFullscreen">⛶</button>
   </div>
 </div>
 
 <div class="search-container">
-  <input id="searchBox" oninput="searchEpisodes()" placeholder="Search episodes…">
+  <input id="searchBox" placeholder="Search episodes..." oninput="searchEpisodes()">
+  <div id="episodeList"></div>
 </div>
-<div id="episodeList"></div>
 
 <footer>
-  <h2>About Wind Breaker</h2>
-  <p>Wind Breaker follows Haruka Sakura… action, heart, friendship & justice.</p>
-  <p>Thank you to the creators and Muse India!</p>
+  <h2 class="font-semibold">About Wind Breaker</h2>
+  <p>Wind Breaker blends action, heart, friendship, and justice as Haruka Sakura fights at Furin High.</p>
+  <p class="mt-2">Thank you to the creators and Muse India!</p>
 </footer>
 
   </div>  <div class="side-panel-toggle" onclick="togglePanel()">⚙️</div>
   <div class="side-panel" id="sidePanel">
-    <div><strong>Themes</strong></div>
-    <div class="theme-option" onclick="setTheme('#000','#fff')">Dark</div>
-    <div class="theme-option" onclick="setTheme('#fff','#000')">Light</div>
-    <div class="theme-option" onclick="setTheme('#fffae6','#1a1a2e')">Cream/Dark</div>
-    <div class="theme-option" onclick="setTheme('#1a1a2e','#fffae6')">Dark/Cream</div>
-    <div class="theme-option" onclick="setTheme('#0f0f0f','#0ff')">Black/Cyan</div>
-    <div><strong>Neon</strong></div>
-    <div class="neon-option" onclick="toggleNeon('cyan')">Cyan Neon</div>
-    <div class="neon-option" onclick="toggleNeon('magenta')">Magenta Neon</div>
-    <div class="neon-option" onclick="toggleNeon('lime')">Lime Neon</div>
-    <div class="neon-option" onclick="toggleNeon('orange')">Orange Neon</div>
+    <div class="font-semibold">Themes:</div>
+    <div class="theme-option bg-black text-white" onclick="setTheme('bg-black','text-white')">Black/White</div>
+    <div class="theme-option bg-yellow-500 text-purple-800" onclick="setTheme('bg-yellow-500','text-purple-800')">Yellow/Purple</div>
+    <div class="theme-option bg-gray-900 text-lime-400" onclick="setTheme('bg-gray-900','text-lime-400')">Dark/Lime</div>
+    <div class="theme-option bg-blue-800 text-pink-300" onclick="setTheme('bg-blue-800','text-pink-300')">Blue/Pink</div>
+    <div class="theme-option bg-green-600 text-orange-300" onclick="setTheme('bg-green-600','text-orange-300')">Green/Orange</div>
+    <div class="mt-2 font-semibold">Neon Modes:</div>
+    <div class="neon-option text-pink-400" onclick="setNeon('text-pink-400')">Pink Neon</div>
+    <div class="neon-option text-blue-400" onclick="setNeon('text-blue-400')">Blue Neon</div>
+    <div class="neon-option text-green-400" onclick="setNeon('text-green-400')">Green Neon</div>
+    <div class="neon-option text-orange-400" onclick="setNeon('text-orange-400')">Orange Neon</div>
+    <div class="neon-option text-red-500" onclick="setNeon('text-red-500')">Red Flame</div>
   </div>  <script>
     let player, hideTimeout;
-    const episodes = Array.from({length:13},(_,i)=>({title:`Episode ${i+1}`,link:['ne0Y0vyjxpE','J2568cnOa1g','QOMv17IjJAU','MT7WzTJZCxg','4sRfndp1vAM','oTvQ-5BNC6w','Em5lFIz_kxU','SBaGblvd4mU','43Hj2GySjgA','TIpodnZtFP4','_L-UG_jvnM4','skAwsc6UL8A','-xUk9E2iQQY'][i]}));
-    let idx=0;
+    const episodes = Array.from({length:13},(_,i)=>({ title:`Episode ${i+1}`, link:['ne0Y0vyjxpE','J2568cnOa1g','QOMv17IjJAU','MT7WzTJZCxg','4sRfndp1vAM','oTvQ-5BNC6w','Em5lFIz_kxU','SBaGblvd4mU','43Hj2GySjgA','TIpodnZtFP4','_L-UG_jvnM4','skAwsc6UL8A','-xUk9E2iQQY'][i] }));
+    let currentEpisodeIndex=0;
 
-    function onYouTubeIframeAPIReady(){
-      player=new YT.Player('videoPlayer',{height:'100%',width:'100%',videoId:episodes[0].link,playerVars:{controls:0,autoplay:1,rel:0,cc_load_policy:1},events:{onReady:init,onStateChange:onState}});
+    // YouTube API
+    function onYouTubeIframeAPIReady() {
+      player = new YT.Player('videoPlayer',{ videoId:episodes[0].link, playerVars:{autoplay:1,controls:0,modestbranding:1,rel:0,cc_load_policy:1}, events:{onReady:init, onStateChange:onStateChange} });
     }
+
+    // Init player and UI
     function init(){
-      loadEpisodes();
+      setupEpisodes();
       updateTime(); setInterval(updateTime,500);
+      setupControls(); setupTapZones();
     }
-    function updateTime(){
-      const cur=player.getCurrentTime(),dur=player.getDuration();
-      document.getElementById('currentTime').textContent=format(cur);
-      document.getElementById('duration').textContent=format(dur||0);
-      document.getElementById('progressFilled').style.width=((cur/dur)*100||0)+'%';
+
+    function setupEpisodes(){
+      const list=document.getElementById('episodeList');
+      const frag=document.createDocumentFragment();
+      episodes.forEach((ep,i)=>{
+        const btn=document.createElement('button'); btn.textContent=ep.title;
+        btn.onclick=()=>{ currentEpisodeIndex=i; player.loadVideoById(ep.link); };
+        frag.appendChild(btn);
+      });
+      list.appendChild(frag);
     }
-    function format(sec){const m=Math.floor(sec/60),s=Math.floor(sec%60);return m+':'+String(s).padStart(2,'0');}
-    function togglePlay(){const s=player.getPlayerState();s===1?player.pauseVideo():player.playVideo();}
-    function seek(s){player.seekTo(player.getCurrentTime()+s,true);}    
-    function setVolume(v){player.setVolume(v);}    
-    function setRate(r){player.setPlaybackRate(r);}    
-    function playNext(){if(idx<episodes.length-1)player.loadVideoById(episodes[++idx].link);}    
-    function playPrev(){if(idx>0)player.loadVideoById(episodes[--idx].link);}    
-    function onState(e){if(e.data===1){document.getElementById('controlsBar').classList.remove('hide');clearTimeout(hideTimeout);hideTimeout=setTimeout(()=>document.getElementById('controlsBar').classList.add('hide'),3000);}if(e.data===0)playNext();}
-    document.addEventListener('mousemove',()=>document.getElementById('controlsBar').classList.remove('hide'));
-    function scrub(e){const r=e.currentTarget.getBoundingClientRect(),p=(e.clientX-r.left)/r.width;player.seekTo(p*player.getDuration(),true);}    
-    function loadEpisodes(){const c=document.getElementById('episodeList');c.innerHTML='';episodes.forEach((e,i)=>{const b=document.createElement('button');b.textContent=e.title;b.onclick=()=>{idx=i;player.loadVideoById(e.link);};c.appendChild(b);});}
-    function searchEpisodes(){const v=document.getElementById('searchBox').value.toLowerCase();document.querySelectorAll('#episodeList button').forEach(b=>b.style.display=b.textContent.toLowerCase().includes(v)?'block':'none');}
-    function toggleFullscreen(){const el=document.getElementById('videoWrapper');el.requestFullscreen?.()||el.webkitRequestFullscreen?.();}
-    function togglePanel(){document.getElementById('sidePanel').classList.toggle('active');}
-    function setTheme(bg,txt){document.body.style.background=bg;document.body.style.color=txt;}
-    function toggleNeon(c){document.body.classList.toggle('neon');document.body.style.color=c;}
+
+    function searchEpisodes(){ const v=document.getElementById('searchBox').value.toLowerCase(); document.querySelectorAll('#episodeList button').forEach(b=>b.style.display=b.textContent.toLowerCase().includes(v)?'':'none'); }
+
+    function setupControls(){
+      document.getElementById('btnPlay').onclick=()=>{ const s=player.getPlayerState(); s===YT.PlayerState.PLAYING?player.pauseVideo():player.playVideo(); };
+      document.getElementById('btnBack10').onclick=()=>seek(-10);
+      document.getElementById('btnNext10').onclick=()=>seek(10);
+      document.getElementById('progress').oninput=e=>scrub(e,true);
+      document.getElementById('volume').oninput=e=>player.setVolume(e.target.value);
+      document.getElementById('speed').onchange=e=>player.setPlaybackRate(e.target.value);
+      document.getElementById('btnPIP').onclick=togglePIP;
+      document.getElementById('btnFullscreen').onclick=toggleFullscreen;
+    }
+
+    function updateTime(){ if(!player.getCurrentTime) return; const cur=player.getCurrentTime(), dur=player.getDuration();
+      document.getElementById('currentTime').textContent=formatTime(cur);
+      document.getElementById('duration').textContent=formatTime(dur);
+      const pct=(cur/dur)*100; document.getElementById('progress').value=pct;
+    }
+    function formatTime(sec){ const m=Math.floor(sec/60), s=Math.floor(sec%60); return m+':'+String(s).padStart(2,'0'); }
+    function scrub(e,live){ const pct=live?e.target.value/100:(e.clientX-e.target.getBoundingClientRect().left)/e.target.clientWidth; player.seekTo(pct*player.getDuration(),true); }
+    function seek(s){ player.seekTo(player.getCurrentTime()+s,true); }
+    function onStateChange(e){ const ctrls=document.getElementById('videoControls'); if(e.data===YT.PlayerState.PLAYING){ ctrls.classList.remove('hide'); clearTimeout(hideTimeout); hideTimeout=setTimeout(()=>ctrls.classList.add('hide'),3000);} if(e.data===YT.PlayerState.ENDED) loadNext(); }
+    function setupTapZones(){ let lastTap=0; [ ['tapLeft',()=>seek(-10)], ['tapRight',()=>seek(10)] ].forEach(([id,fn])=>{
+        const zone=document.getElementById(id);
+        let holdTimer;
+        zone.addEventListener('touchstart',e=>{
+          const now=Date.now(); if(now-lastTap<300) fn(); lastTap=now;
+          holdTimer=setTimeout(()=>player.setPlaybackRate(2),500);
+        });
+        zone.addEventListener('touchend',e=>{ clearTimeout(holdTimer); player.setPlaybackRate(1); });
+    }); }
+
+    function toggleFullscreen(){ const el=document.getElementById('videoWrapper'); el.requestFullscreen?.()||el.webkitRequestFullscreen?.(); }
+    function togglePIP(){ const iframe=player.getIframe(); document.pictureInPictureElement?document.exitPictureInPicture():iframe.requestPictureInPicture(); }
+    function loadNext(){ if(currentEpisodeIndex<episodes.length-1) player.loadVideoById(episodes[++currentEpisodeIndex].link); }
+
+    function togglePanel(){ document.getElementById('sidePanel').classList.toggle('active'); }
+    function setTheme(bg,txt){ document.body.className=''; document.body.classList.add(bg,txt); }
+    function setNeon(color){ document.body.classList.toggle('neon'); document.body.style.setProperty('color',color); }
   </script></body>
 </html>
